# EpubReader

./: .gitignore  CLAUDE.md  EpubReader.spec  EpubReader_mac.spec  README.md  main.py  pyproject.toml  test_cover_svg.txt
.claude/: settings.json  settings.local.json
.github/workflows/: build_mac.yml
app/: config.py
app/core/: book_manager.py  epub_parser.py  models.py  storage.py  txt_converter.py
app/ui/: bookmark_panel.py  bookshelf.py  main_window.py  reader.py  settings.py  toc_panel.py
app/utils/: epub_server.py
data/notes/: 4ec12c1e-8fdf-4548-97ef-77b40f0b2cbf.json  fe139aad-2a6a-485b-9bfa-25855ea2b455.json
forexe/: epub.icns
openspec/: config.yaml
openspec/changes/archive/2026-04-22-add-bookmark-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-add-reader-theme-colors/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-epub-reader/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-toolbar-i18n-zh/: proposal.md
openspec/changes/archive/2026-04-23-fix-copy-and-export-btn/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-reader-note-ui-improvements/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-seamless-chapter-scrolling/: design.md  proposal.md  tasks.md
openspec/specs/text-selection-actions/: spec.md
openspec/specs/toolbar-txt-conversion/: spec.md
openspec/specs/txt-to-epub-conversion/: spec.md
test_svg_output/: test_cover_svg.epub  test_cover_svg_1.epub  test_cover_svg_2.epub  test_cover_svg_3.epub
(+38 files in other folders)
