[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "epub-reader"
version = "0.1.0"
description = "A cross-platform EPUB reader with scrolling-style reading"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "lxml>=4.9",
]

[project.scripts]
epub-reader = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]
